force-app/main/default/objects/CommissionedCA__c/CommissionedCA__c.object-meta.xml
<CustomObject>
    <description>CommissionedCA linked to Order Shipping</description>
    <label>Commissioned CA</label>
    <nameField>
        <label>CommissionedCA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commissioned CAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>