force-app/main/default/objects/CommissionedCA__c/fields/Commissioned_CA__c.field-meta.xml
<CustomField>
    <fullName>Commissioned_CA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commissioned CA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commissioned_CAs</relationshipName>
    <type>Lookup</type>
</CustomField>