force-app/main/default/objects/CommissionedCA__c/fields/Commissioned_CA_Email__c.field-meta.xml
<CustomField>
    <fullName>Commissioned_CA_Email__c</fullName>
    <formula>Commissioned_CA__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissioned CA Email</label>
    <type>Text</type>
</CustomField>