force-app/main/default/objects/CommissionedCA__c/fields/Commissioned_CA_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Commissioned_CA_FirstName__c</fullName>
    <formula>Commissioned_CA__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissioned CA FirstName</label>
    <type>Text</type>
</CustomField>