force-app/main/default/objects/CommissionedCA__c/fields/Commissioned_CA_LastName__c.field-meta.xml
<CustomField>
    <fullName>Commissioned_CA_LastName__c</fullName>
    <formula>Commissioned_CA__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissioned CA LastName</label>
    <type>Text</type>
</CustomField>