force-app/main/default/objects/CommissionedCA__c/fields/Commissioned_CA_WWEmployeeID__c.field-meta.xml
<CustomField>
    <fullName>Commissioned_CA_WWEmployeeID__c</fullName>
    <formula>Commissioned_CA__r.WWEmployeeNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissioned CA WWEmployeeID</label>
    <type>Text</type>
</CustomField>