force-app/main/default/objects/CommissionedCA__c/fields/Order_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Order_Shipping__c</fullName>
    <label>Order Shipping</label>
    <referenceTo>OrderShipping__c</referenceTo>
    <relationshipLabel>Commissioned CAs</relationshipLabel>
    <relationshipName>Commissioned_CAs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>